# dibiman

./: .clangd  .gitignore  README.md  env.yml  todo.md
conf/: left_arm.ini  model.urdf  right_arm.ini  testBox.urdf
scripts/: icub-gz-test.xml  icub-gz.sh  icub-gz.xml  simplot.m
src/: CMakeLists.txt  icub_bim.cpp
src/examples/: TestFmpcOscillator.cpp  double_pendulum.cpp  main.cpp
srcPy/: icubBiMan.py  icubPin.py  nmpcArm.py  objPin.py  objectDynClass.py  objectDynamics.py  plotTraj.py  plotUtils.py  utils.py
